--- a/.github/workflows/my_first_workflow.yaml
+++ b/.github/workflows/my_first_workflow.yaml
@@ -13,10 +13,8 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
             - name: Checkout code
-              uses: actions/checkout@v2
               run: echo "Checkout Code"
               shell: bash
-            - name: Build and test
-              run: echo "Build and test"
-              shell: bash
+
