--- a/.github/workflows/my_first_workflow.yaml
+++ b/.github/workflows/my_first_workflow.yaml
@@ -25,5 +25,16 @@ jobs:
               run: echo '${{ toJson(github.event) }}' | jq
               shell: bash
 
+    community-action:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Create Comment"
+              uses: peter-evans/create-or-update-comment@v2
+              with:
+                  issue-number: ${{ github.event.issue.number }}
+                  body: "Hello from the community action :sparkles:"
+                  reactions: "+1"
+
+
 
 
