--- a/.github/workflows/my_first_workflow.yaml
+++ b/.github/workflows/my_first_workflow.yaml
@@ -28,12 +28,17 @@ jobs:
     community-action:
         runs-on: ubuntu-latest
         steps:
-            - name: Create Comment"
-              uses: peter-evans/create-or-update-comment@v2
+            - name: Create comment
+              uses: peter-evans/create-or-update-comment@v4
               with:
-                  comment-id: ${{ github.event.comment.id }}
-                  body: "Hello from the community action :sparkles:"
-                  reactions: "+1"
+              issue-number: 1
+              body: |
+                    This is a multi-line test comment
+                    - With GitHub **Markdown** :sparkles:
+                    - Created by [create-or-update-comment][1]
+
+                    [1]: https://github.com/peter-evans/create-or-update-comment
+              reactions: '+1'
 
 
 
