--- a/.github/workflows/my_first_workflow.yaml
+++ b/.github/workflows/my_first_workflow.yaml
@@ -10,20 +10,20 @@ on:
     workflow_dispatch:
 
 jobs:
-#     build:
-#         runs-on: ubuntu-latest
-#         steps:
-#             - uses: actions/checkout@v2
-#             - name: Checkout code
-#               run: echo "Checkout Code"
-#               shell: bash
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Checkout code
+                run: echo "Checkout Code"
+                shell: bash
 
-#     get-github-context:
-#         runs-on: ubuntu-latest
-#         steps:
-#             - name: "Get GitHub context"
-#               run: echo '${{ toJson(github.event) }}' | jq
-#               shell: bash
+    get-github-context:
+        runs-on: ubuntu-latest
+        steps:
+            - name: "Get GitHub context"
+                run: echo '${{ toJson(github.event) }}' | jq
+                shell: bash
 
     community-action:
         runs-on: ubuntu-latest
